<resources>
    <string name="app_name">EMediApp</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
    </string>

    <!-- Corina von Kaenel: Strings der eMediApp  -->
    <string name="overview1_text">"letzte Einnahme 12:00: ok"</string>
     <string name="overview2_text">"nächste Einnahme 18:00: in 4.5 Stunden"</string>
    <string name="currentCalender_text">kein Termineintrag</string>
    <string name="pulsrateSPhone_text">
    "Pulsmessung heute 10:05: 85 "
    </string>
    <string name="addMedIntake_button">Medikamenteneinnahme registrieren</string>

    <string name="medieinnahmeErfasst_toast">Medikamenteneinnahme "1 Tablette Beispielmedi 9:45" erfasst</string>
    <string name="lastImportMediplan_text">"letze Änderung erfasst am\n" "10.1.2016 "</string>
    <string name="createMediplan_button">Mediplan Barcode erstellen</string>


    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!--Manuel Pfister-->
    <string name="second_View_TextButton">Change 2.View Button</string>
    <string name="next">Next</string>
    <string name="title_activity_sub">Demo</string>
    <string name="title_activity_med_reminder">MedReminderActivity</string>
    <string name="step_count">Schritte: %d</string>



</resources>
