<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main_page" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainPageActivity">

    <!-- Corina von Kaenel: Layout Startseite V.0.1 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/text_margin"
            android:text="@string/overview1_text" />

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/text_margin"
            android:text="@string/pulsrateSPhone_text" />

        <TextView android:id="@+id/Medication_textView"
            android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="@dimen/text_margin"
            />

        <Button
            android:id="@+id/addMedIntake_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addMedIntake_button"/>

    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
