<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main_page" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context=".MainOverviewTab">



    <!-- Corina von Kaenel: Layout Uebersichtstab
     Beinhaltet eine Analoge Uhr mit dem Datum und Status rechts davon
     unterhalb befindet sich das Ergebnis der letzte Pulsmessung-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <AnalogClock
                android:layout_width="188dp"
                android:layout_height="wrap_content"
                android:id="@+id/analogClock"
                android:layout_weight="0.54" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/content_overview_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimary"
                    android:layout_margin="@dimen/text_margin"
                    tools:text="11.11.2011"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/text_margin"
                    android:text="@string/currentCalender_text"/>
            </LinearLayout>

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackgroundDarker"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/overview1_text"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/text_margin"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp"
            android:text="@string/overview2_text"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorButtonDarker"
            android:textColor="@color/colorWhiteText"
            android:layout_margin="20dp"
            android:id="@+id/addMediIntake_button"
            android:text="Medikamenteneinnahme Erfassen"/>
    </LinearLayout>



        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/pulsrateSPhone_text" />

        <TextView
            android:id="@+id/step_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="Schritte: "
            tools:text="stepcount" />



</LinearLayout>


</android.support.v4.widget.NestedScrollView>
